--- a/gepitan.ipynb
+++ b/gepitan.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMK6LoQMsKsDaRE5O4ABZW2",
+      "authorship_tag": "ABX9TyPU12CvsjYdhEjmAxZ6Ium1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "id": "XRnW6cAmQNls"
       },
       "source": [
-        "Adat beolvasás:"
+        "##--Adat beolvasás:"
       ]
     },
     {
@@ -63,10 +63,11 @@
         "                 #  nrows=86 # ennyi sort veszünk figyelembe\n",
         "                 # skiprows = 3 az eslő ennyi sort hagyjuk figyelmen kívül\n",
         "                 # names = colnames # Ha külön van a header itt külön is hozzá tudjuk adni\n",
+        "                 #na_values=\"?\"\n",
         "                 )\n",
         "df"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,6 +349,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "u9pp-Ln-ewEr"
+      },
+      "source": [
+        "##--Adathalmaz szétválasztása"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "CkN8ISQkQp7T"
       },
       "source": [
@@ -378,6 +388,12 @@
         "id": "D0_XPULDxjSj"
       },
       "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# Ez kódként van formázva\n",
+        "```\n",
+        "\n",
         "(2)Adathalmaz szétválasztása cél és jellemző változókra"
       ]
     },
@@ -398,7 +414,7 @@
         "                                                                                       test_size=0.25,\n",
         "                                                                                       random_state=42)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -408,6 +424,39 @@
             "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-49f9c3261e12>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    = train_test_split(features, classlabels, test_size=0.25, random_state=42)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a2nPWCXxe2_a"
+      },
+      "source": [
+        "\n",
+        "(3)Adathalmaz szétválasztása cél és jellemző változókra"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mxCWjlXKe3dF"
+      },
+      "source": [
+        "testFeatures = d[d.GameID > 7000].loc[:,\"Age\":]\n",
+        "trainFeatures = d[d.GameID < 7001].loc[:,\"Age\":]\n",
+        "trainLabels = d[d.GameID < 7001].LeagueIndex\n",
+        "testLabels =  d[d.GameID > 7000].LeagueIndex"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4y4ZpSZMfJTE"
+      },
+      "source": [
+        "##--Átalakítások, szűrések"
       ]
     },
     {
@@ -478,7 +527,8 @@
         "vectorizer.fit(train_data.text)# minden előforduló szót összegyűjt\n",
         "\n",
         "features = vectorizer.transform(train_data.text) #minden szót megszámol hányszor fordul elő \n",
-        "                                                 #és hozzárendeli a szóhoz a számértéket"
+        "                                                 #és hozzárendeli a szóhoz a számértéket\n",
+        "                                                 "
       ],
       "execution_count": null,
       "outputs": []
@@ -489,7 +539,7 @@
         "id": "Ccj58AFMuLnT"
       },
       "source": [
-        "###Képek Feldolgozása"
+        "Szöveg feldolgozás"
       ]
     },
     {
@@ -518,7 +568,29 @@
         "id": "7TR6WFzepRPe"
       },
       "source": [
-        "Döntési fa  --> Ha kevés jellemző oszlop van"
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2KM46d2ucTwz"
+      },
+      "source": [
+        "##-- Osztályozás\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3J2DOx5XfZ3S"
+      },
+      "source": [
+        "Osztályozási Döntési fa  --> Ha kevés jellemző oszlop van"
       ]
     },
     {
@@ -584,6 +656,87 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "KyOiKHZMcYF2"
+      },
+      "source": [
+        "##--Regresszió"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j6imFvBXZq4Y"
+      },
+      "source": [
+        "Lineáris regressziós modell - lineáris gép szintén - sok oslop eseten hasznos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OiFnzPMMZ6Pi"
+      },
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "reg = LinearRegression() # lineáris gép regresszióra\n",
+        "reg.fit(trainFeatures, trainLabels)\n",
+        "prediction = reg.predict(testFeatures)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hlbStBAWRRw9"
+      },
+      "source": [
+        "Regressziós(folytonos értékek) Döntési fa --> ha kevés oszlop van"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CTT84ex0RYnI"
+      },
+      "source": [
+        "from sklearn.neighbors import KNeighborsRegressor\n",
+        "\n",
+        "dt = KNeighborsRegressor(n_neighbors=9) # döntési fa regresszióra\n",
+        "dt.fit(trainFeatures, trainLabels) # tanítás a tanító adatbázison\n",
+        "prediction = dt.predict(testFeatures) # predikció a teszt adatbázison"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ImCwWmSDcb8j"
+      },
+      "source": [
+        "Logistic regression - egyenesekkel dönti el hova esnek az egyedek"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NLFZdX8CcRbo"
+      },
+      "source": [
+        "lin = LogisticRegression(random_state=0, max_iter=10000, class_weight=\"balanced\", C=10**-3)\n",
+        "lin.fit(train_features, train_classlabels)  \n",
+        "valid_prediction = lin.predict(valid_features)\n",
+        "print(classification_report(valid_classlabels, valid_prediction))\n",
+        "print(\"Legjobb logisztikus regresszió a validációs halmazon:\", f1_score(valid_classlabels, valid_prediction, pos_label=1))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "dNhPoG8NzfWO"
       },
       "source": [
@@ -596,7 +749,7 @@
         "id": "7z_-tiZ2znFo"
       },
       "source": [
-        "##Döntési fa hangolása - mélység beállítása (melyik mélység az ideális?)"
+        "##--Döntési fa hangolása - mélység beállítása (melyik mélység az ideális?)"
       ]
     },
     {
@@ -630,7 +783,7 @@
         "id": "Cfk6HmSE0Nld"
       },
       "source": [
-        "## Lineáris gép meta-paraméter hangolása\n"
+        "## --Lineáris gép meta-paraméter hangolása\n"
       ]
     },
     {
@@ -679,7 +832,7 @@
         "id": "ZbKWOqnK1Xfn"
       },
       "source": [
-        "## kNN osztályozó meta-paraméter hangolása"
+        "## --kNN osztályozó meta-paraméter hangolása"
       ]
     },
     {
@@ -731,7 +884,7 @@
         "id": "iq7WjKsE19J0"
       },
       "source": [
-        "## *? HA az összes előfordulási lehetőségre meg akarjuk nezni"
+        "## --*? HA az összes előfordulási lehetőségre meg akarjuk nezni"
       ]
     },
     {
@@ -780,10 +933,39 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "aXfHSi0eSfWR"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "qccP839HyOEK"
       },
       "source": [
         "#Predikciók"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LZouLhjFtWAt"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0c5o8-l7tfmP"
+      },
+      "source": [
+        "##Főmodell kiértékelés"
       ]
     },
     {
@@ -811,11 +993,111 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "v-kj5yU_tM6q"
+      },
+      "source": [
+        "Accuracy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VFs3hU4MtPaH"
+      },
+      "source": [
+        "accuracy_score(y_true=test_data.label, y_pred=prediction)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "haxodotErxxM"
       },
       "source": [
         "#Kiértékelés"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tXg8i2LBSvNn"
+      },
+      "source": [
+        "##--Visszaellenőrzés-jó e amit csináltunk BASELINE-al"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gFWrHtKlv97c"
+      },
+      "source": [
+        "from sklearn.dummy import DummyClassifier\n",
+        "\n",
+        "dummy_clf = DummyClassifier(strategy=\"most_frequent\") #vagy  mean # tanító adatbázis leggyakoribb osztálya lesz mindig a predikció\n",
+        "dummy_clf.fit(features, train_data.label) # ugyanazon a tanító adatbázison \"tanítjuk\"\n",
+        "baseline_prediction = dummy_clf.predict(test_features) # predikció a kiértékelő adatbázison\n",
+        "accuracy_score(baseline_prediction, test_data.label)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZEQPiyUAS81R"
+      },
+      "source": [
+        "MSE hibaellenőrzés"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GXJm8qGfTBkY"
+      },
+      "source": [
+        "from sklearn.metrics import mean_squared_error # MSE (RMSE végső gyökvonás nélkül)\n",
+        "mean_squared_error(prediction, testLabels)\n",
+        "\n",
+        "from sklearn.dummy import DummyRegressor\n",
+        "dummy = DummyRegressor(strategy='mean') # tanító adatbázis címkéinek átlaga lesz mindig a predikció\n",
+        "dummy.fit(trainFeatures, trainLabels)\n",
+        "mean_squared_error(dummy.predict(testFeatures), testLabels)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gyrnKnuWS1in"
+      },
+      "source": [
+        "##--Ábrák, kirajzolások"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O61bDP2pawQw"
+      },
+      "source": [
+        "Sima hisztogramm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lwppsxiuazvv"
+      },
+      "source": [
+        "classlabels.hist()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -833,6 +1115,29 @@
       },
       "source": [
         "sorted(zip(model.coef_[0], vectorizer.get_feature_names()),reverse=True)[:15]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "54_HmZYeraG9"
+      },
+      "source": [
+        "legerősebb jellemző regressziós esetén"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hHwyN7yGrfoO"
+      },
+      "source": [
+        "dt = DecisionTreeRegressor(max_depth=1)\n",
+        "dt.fit(trainFeatures, trainLabels) # tanítás a tanító adatbázison\n",
+        "root = dt.tree_.feature[0] # gyökér csúcsban lévő jellemző indexe\n",
+        "trainFeatures.columns[root] # legfontosabb jellemző DT szerint"
       ],
       "execution_count": null,
       "outputs": []
@@ -877,6 +1182,54 @@
       },
       "source": [
         ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZgxLbBg8aHvi"
+      },
+      "source": [
+        "Regresszió vizualizalas:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qntr3XPuaK2A"
+      },
+      "source": [
+        "fig, ax = plt.subplots(figsize=(18, 6))\n",
+        "plt.plot(range(0,len(trainLabels)), trainLabels, c='grey', alpha=0.5)\n",
+        "testrange = range(len(trainLabels)-1,len(trainLabels)+len(testLabels)-1)\n",
+        "plt.plot(testrange, testLabels, c='c', marker='o')\n",
+        "plt.plot(testrange, prediction, c='r', marker='o')\n",
+        "ax.legend(['múlt', 'jövőbeli tényleges', 'predikció'])\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TLDvs1bVwaGw"
+      },
+      "source": [
+        "Tévesztési mátrix szines"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UAiY-kG-wdox"
+      },
+      "source": [
+        "from sklearn.metrics import ConfusionMatrixDisplay\n",
+        "cm = confusion_matrix(y_true=test_data.label, y_pred=prediction)\n",
+        "ConfusionMatrixDisplay(cm, display_labels=model.classes_).plot(values_format='.3g')"
       ],
       "execution_count": null,
       "outputs": []
