Létrehozva a Colaboratory használatával

--- a/gepitan.ipynb
+++ b/gepitan.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPU12CvsjYdhEjmAxZ6Ium1",
+      "authorship_tag": "ABX9TyPl0RSsTp7NFxnnWGsxtIwz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -383,21 +383,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "D0_XPULDxjSj"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "# Ez kódként van formázva\n",
-        "```\n",
-        "\n",
-        "(2)Adathalmaz szétválasztása cél és jellemző változókra"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -731,6 +716,37 @@
         "print(classification_report(valid_classlabels, valid_prediction))\n",
         "print(\"Legjobb logisztikus regresszió a validációs halmazon:\", f1_score(valid_classlabels, valid_prediction, pos_label=1))"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# BASELINE REGRESSZIORA\n",
+        "from sklearn.dummy import DummyRegressor\n",
+        "dummy = DummyRegressor(strategy='mean') # tanító adatbázis címkéinek átlaga lesz mindig a predikció\n",
+        "dummy.fit(trainFeatures, trainLabels)\n",
+        "mean_squared_error(dummy.predict(testFeatures), testLabels)"
+      ],
+      "metadata": {
+        "id": "DG0g02ZT_wiM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# DONTESI FA RESGRESSZIORA\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "\n",
+        "dt = DecisionTreeRegressor(min_samples_leaf=50) # döntési fa regresszióra\n",
+        "dt.fit(trainFeatures, trainLabels) # tanítás a tanító adatbázison\n",
+        "prediction = dt.predict(testFeatures) # predikció a teszt adatbázison"
+      ],
+      "metadata": {
+        "id": "gGPr75za_z4e"
+      },
       "execution_count": null,
       "outputs": []
     },
